@@ -48,6 +48,7 @@ sub new {
         'contacts'                  => $data->{'contacts'}      || [],
         'contactgroups'             => $data->{'contactgroups'} || [],
         'notification_period'       => $data->{'notification_period'} || '',
+        'event_handler'             => $data->{'event_handler'} || '',
         'create_obj'                => $data->{'create_obj'}    || 0,
         'create_obj_ok'             => 1,
         'scheduled_downtime_depth'  => 0,
@@ -221,7 +222,7 @@ sub get_save_obj {
     };
 
     # save this keys
-    for my $key (qw/template create_obj notification_period contactgroups contacts/) {
+    for my $key (qw/template create_obj notification_period event_handler contactgroups contacts/) {
         $obj->{$key} = $self->{$key} if $self->{$key};
     }
 
@@ -260,7 +261,7 @@ sub get_objects_conf {
             '_THRUK_BP_ID'   => $bp->{'id'},
             '_THRUK_NODE_ID' => $self->{'id'},
         };
-        for my $key (qw/notification_period/) {
+        for my $key (qw/notification_period event_handler/) {
             next unless $bp->{$key};
             $obj->{'hosts'}->{$bp->{'name'}}->{$key} = $bp->{$key};
         }
@@ -282,7 +283,7 @@ sub get_objects_conf {
         '_THRUK_BP_ID'        => $bp->{'id'},
         '_THRUK_NODE_ID'      => $self->{'id'},
     };
-    for my $key (qw/notification_period/) {
+    for my $key (qw/notification_period event_handler/) {
         next unless $self->{$key};
         $obj->{'services'}->{$bp->{'name'}}->{$self->{'label'}}->{$key} = $self->{$key};
     }
@@ -426,6 +427,7 @@ sub _set_function {
         $self->{'contacts'}             = [];
         $self->{'contactgroups'}        = [];
         $self->{'notification_period'}  = '';
+        $self->{'event_handler'}        = '';
         $self->{'create_obj'} = 0 unless(defined $self->{'id'} and $self->{'id'} eq 'node1');
     }
     if($self->{'function'} eq 'groupstatus') {
